Updating layout bugs/fonts from QA

--- a/blocks/bytetag-buy/bytetag-buy.css
+++ b/blocks/bytetag-buy/bytetag-buy.css
@@ -73,13 +73,18 @@
   border-top: 1px solid #d9d9d9;
   margin-top: 1rem;
   padding-top: 1rem;
-  font-size: 1.625rem;
-  line-height: 2.25rem;
+  font-size: 26px;
+  line-height: 36px;
+  color: #000000;
+  font-weight: 700;
 }
 
 .bytetag-buy > div p {
   font-size: 18px;
   line-height: 28px;
+  color: #000000;
+  display: flex;
+  align-items: center;
 }
 
 .bytetag-buy > div h3:first-of-type {
@@ -88,7 +93,7 @@
 
 .bytetag-buy > div > div > p > picture {
   display: inline-block;
-  margin-right: 6px;
+  margin-right: 10px;
 }
 
 .bytetag-buy > div > div > p > picture + * {
