--- a/templates/bytetag/bytetag.css
+++ b/templates/bytetag/bytetag.css
@@ -1,7 +1,32 @@
+/* latin */
+@font-face {
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: 600;
+  font-display: swap;
+  src: url("https://fonts.gstatic.com/s/raleway/v28/1Ptug8zYS_SKggPNyC0IT4ttDfA.woff2")
+    format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+    U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191,
+    U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+/* latin */
+@font-face {
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: url("https://fonts.gstatic.com/s/raleway/v28/1Ptug8zYS_SKggPNyC0IT4ttDfA.woff2")
+    format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+    U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191,
+    U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
 .bytetag main .section {
-    @media (max-width: 600px){
-        padding: 2rem 1rem;
-    }
+  @media (max-width: 600px) {
+    padding: 2rem 1rem;
+  }
 }
 
 .bytetag .section.hero-container {
@@ -73,58 +98,76 @@
 }
 
 .bytetag .hero-wrapper .text-div h1 + p {
+  font-family: var(--heading-font-family);
   font-size: 28px;
   line-height: 36px;
   padding: 0 1rem;
+  font-weight: 600;
+  color: #333f48;
   @media (min-width: 1024px) {
-    padding:0;
+    padding: 0;
     max-width: 468px;
     margin: 1rem 0;
   }
 }
 
 .bytetag .hero-wrapper .text-div p.button-container {
-    width: 260px;
-    @media (max-width: 600px){
-        width: 100%; 
-    }
+  width: 260px;
+  @media (max-width: 600px) {
+    width: 100%;
+  }
 }
 
-.bytetag .hero-wrapper .text-div p.button-container > a{
-    width: 100%;
-    font-weight: 400;
-    background-color: #C74D2F;
-    @media (max-width: 600px) {
-        margin: 1rem;
-    }
+.bytetag .hero-wrapper .text-div p.button-container > a {
+  width: 100%;
+  font-weight: 600;
+  background-color: #c74d2f;
+  @media (max-width: 600px) {
+    margin: 1rem;
+  }
 }
 
 .bytetag .hero-wrapper .text-div p.button-container > a:hover,
-.bytetag .hero-wrapper .text-div p.button-container > a:focus{
-    background-color: var(--link-hover-color);
-    cursor: pointer;
+.bytetag .hero-wrapper .text-div p.button-container > a:focus {
+  background-color: var(--link-hover-color);
+  cursor: pointer;
 }
 
-.bytetag .hero-wrapper .text-div p:last-of-type{
-    font-size: 16px;
-    line-height: 28px;
+.bytetag .hero-wrapper .text-div p:last-of-type strong em {
+  font-family: var(--heading-font-family);
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 28px;
 }
 
 .bytetag .hero-wrapper .text-div p:last-of-type::before {
   display: inline-block;
-  content: '';
-  margin-left: .8rem;
+  content: "";
+  margin-left: 0.8rem;
   margin-bottom: 4px;
   height: 12px;
   width: 80px;
   background: var(--text-color);
-  -webkit-mask: url('../../icons/stars-five.svg') no-repeat center center;
-  mask: url('../../icons/stars-five.svg') no-repeat center center;
+  -webkit-mask: url("../../icons/stars-five.svg") no-repeat center center;
+  mask: url("../../icons/stars-five.svg") no-repeat center center;
   vertical-align: middle;
 }
 
 .bytetag .section h2 {
-    font-size: 35px;
-    line-height: 45px;
-    margin-bottom: 3rem;
+  font-size: 48px;
+  line-height: 58px;
+  font-weight: 700;
+  color: #333f48;
+  margin-bottom: 1rem;
+}
+
+.bytetag .section .default-content-wrapper h2 {
+  font-size: 35px;
+  line-height: 45px;
+  font-weight: 700;
+  color: #333f48;
+  margin-bottom: 3rem;
+}
+.bytetag footer.footer-top-spacing .footer {
+  border-top: 0;
 }
